k8s/staging/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost-staging-ts
  namespace: bifrost-staging
spec:
  defaultBackend:
    service:
      name: bifrost
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - bifrost-staging
